<resources>
    <string name="app_name">Plan Day</string>
    <string name="facebook_app_id">443348159424152</string>
    <string name="fb_login_protocol_scheme">fb443348159424152</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login With Google</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
</resources>
